# ksso

./: .agignore  .editorconfig  .env  .envrc  .gitignore  .ignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamlfix.toml  .yamllint  CHANGELOG.md  README.md  pyproject.toml
.github/: CODEOWNERS  mergeable.yml  pull_request_template.md  settings.yaml
.github/workflows/: build.yaml  stale.yaml
ksso/: aws.py  config.py  credstore.py  exceptions.py  failure_access_prohibited_message.html  main.py  server.py  success_message.html
