[tool.poetry]
name = "ksso"
version = "0.1.0"
description = "A Flask app to authenticate via Keycloak and assume AWS role"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ksso"}]

[tool.poetry.dependencies]
python = "3.12"
flask = "^3.1.0"            # Latest Flask
boto3 = "^1.35.82"          # Latest boto3
requests = "^2.32.3"        # Latest requests
urllib3 = "^2.2.3"          # Compatible urllib3
werkzeug = "^3.1.3"         # Werkzeug matching Flask version
jinja2 = "^3.1.4"           # Latest Jinja2
click = "^8.1.7"            # Latest Click
itsdangerous = "^2.2.0"     # Flask dependency
certifi = "^2024.12.14"     # Latest certifi
pyinstaller = "^6.11.1"
toml = "^0.10.2"
pyjwt = "^2.10.1"

[tool.poetry.scripts]
ksso = "ksso.main:main"  # Entry point to your script

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
